# paxc

./: .gitignore  Cargo.toml  README.md  REFERENCE.md  SECURITY.md
.cargo/: config.toml
.github/: dependabot.yml
examples/: slice1.pax  slice10.pax  slice11.pax  slice12.pax  slice13.pax  slice14.pax  slice15.pax  slice16.pax  slice17.pax  slice18.pax  slice2.pax  slice20.pax  slice21.pax  slice22.pax  slice23.pax  slice27.pax  slice28.pax  slice29.pax  slice30.pax  slice31.pax  slice32.pax  slice33.pax  slice34.pax  slice4.pax  slice5.pax  slice6.pax  slice8.pax  slice9.pax  tour.pax
examples/pa/: HTTP_Get_Order.json  Post_to_webhook.json  Recurrence.trigger.json  Send_reminder_email.json
examples/roundtrip_smoke/: roundtrip_smoke.pax
src/: ast.rs  diagnostic.rs  emitter.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  packager.rs  parser.rs  resolver.rs
src/pa/: decoder.rs  emitter.rs  functions.rs  mod.rs  names.rs  packager.rs  paexpr.rs
tests/: decoder.rs
tests/fixtures/pa/: foo.json
