[package]
name = "paxc"
version = "1.15.1"
edition = "2024"
description = "A compiler for the pax DSL, producing Power Automate cloud flow definitions"
license = "MIT"
authors = ["David M. Anderson"]
repository = "https://github.com/anderix/paxc"
keywords = ["power-automate", "dsl", "compiler", "logic-apps", "workflow"]
categories = ["command-line-utilities", "compilers"]

[dependencies]
ariadne = "0.5"
chumsky = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
uuid = { version = "1", features = ["v4"] }

[lib]
name = "paxc"
path = "src/lib.rs"
